--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://images.pexels.com/photos/2092828/
+    pexels-photo-2092828.jpeg?auto=compress&cs=tinysrgb&w=600">
+    <img src="https://images.pexels.com/photos/2092828/
+    pexels-photo-2092828.jpeg?auto=compress&cs=tinysrgb&w=600" alt="vegetation">
+    <img src="https://images.pexels.com/photos/2092828/
+    pexels-photo-2092828.jpeg?auto=compress&cs=tinysrgb&w=600" alt="vegetation" title="Trees are the life of vegetation" >
+    
   </body>
 </html>
